fix: update navigator-toolbox auto-hide style to work on Firefox@133
If `#urlbar` or `#urlbar-container` does not render visibly for Firefox,
it appears that Firefox fails to start at all. This is thus a hack
to keep it rendered offscreen.

The z-index that the sidebar was previous updated to made it overlap
over the navbar, which hides buttons and the url. That is thus lowered
to leave the navbar on top.

The position and z-index has a value in Firefox@133, so we force our
styling there with `!important`.

--- a/.config/librewolf/profiles/default/chrome/sidebar.css
+++ b/.config/librewolf/profiles/default/chrome/sidebar.css
@@ -12,7 +12,7 @@
   min-width: var(--uc-sidebar-width) !important;
   width: var(--uc-sidebar-width) !important;
   /* Show on top of address bar by default */
-  z-index: 4173;
+  z-index: 563;
 }
 
 #sidebar-splitter {
