--- a/.config/librewolf/profiles/default/chrome/userChrome.css
+++ b/.config/librewolf/profiles/default/chrome/userChrome.css
@@ -12,12 +12,14 @@
 /* Auto-hide address bar until focused (Ctrl-L) */
 #navigator-toolbox {
   width: 100%;
-  position: absolute;
+  position: absolute !important;
+  top: -100%;
 }
 
 #navigator-toolbox:hover,
 #navigator-toolbox:focus-within {
-  z-index: 4173;
+  top: 0px;
+  z-index: 4173 !important;
 }
 
 /* Hide buttons in address bar */
